[package]
name = "animations_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy_panorbit_camera = "0.25.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "magic_cube"
path = "magic_cube/src/main.rs"
